--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "3.3.2",
     "axios": "0.18.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
